# latch

./: .gitignore  Makefile  README.md  TASKS.md  TASKS_V2.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish-openclaw-plugin.yml
config/: default-policy.yaml  default-servers.yaml
core/: README.md  __init__.py
core/clawdian_approver/: __init__.py  config.py  device_auth.py  gateway_client.py  hooks_client.py  latch_client.py  logging.py  main.py  models.py  service.py
docker/: openclaw-with-latch-entrypoint.sh  openclaw-with-latch.Dockerfile
docker/latch-openclaw-plugin/: index.ts  openclaw.plugin.json  package.json
openclaw-plugin/: README.md  index.mjs  openclaw.plugin.json  package.json
py/: .dockerignore  Dockerfile  README.md  pyproject.toml
py/src/latch/: approval.py  audit.py  cli.py  config.py  credentials.py  dashboard.py  enroll.py  hook.py  init.py  logging_utils.py  policy.py  serve.py  server_registry.py  tunnel.py
py/src/latch/setup/: __init__.py  openclaw.py  persist.py  presets.py  steps.py  ui.py
py/tests/: test_approval_security.py  test_approval_server.py  test_dashboard_security.py  test_hook.py  test_onboarding.py  test_serve_integration.py  test_server_registry.py  test_setup_helpers.py  test_tunnel.py
scripts/: backfill-audit-agent-mapping.mjs  install-latch.sh  setup-openclaw-mcporter.sh
src/: hook.ts
src/approval/: approval-server.ts
src/audit/: audit-types.ts
src/cli/: dashboard.ts  enroll.ts
src/dashboard/: dashboard-server.ts
src/latch/: audit.py  cli.py  config.py  policy.py  server.py  totp.py
src/mcp/: types.ts
src/policy/: policy-engine.ts  policy-loader.ts
src/ui/: package.json
src/ui/src/: app-shell.ts
test/: hook.test.ts
test/auth/: credential-store.test.ts
test/dashboard/: api.test.ts
test/policy/: policy-engine.test.ts  policy-loader.test.ts
tests/: test_policy.py  test_server.py  test_totp.py
tests/.latch_test/: audit.jsonl  policy.yaml
ts/: package-lock.json  tsconfig.json
ts/src/: hook.ts
ts/src/audit/: audit-log.ts  audit-types.ts
ts/src/auth/: credential-store.ts
ts/src/cli/: serve.ts
ts/src/dashboard/: dashboard-server.ts
ts/src/mcp/: downstream-client.ts  downstream-manager.ts  proxy-server.ts  server-registry.ts
ts/src/policy/: policy-types.ts
ts/src/ui/: index.html  package-lock.json  (+2 more)
ts/test/: hook.test.ts
(+29 files in other folders)
