[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latch"]

[project]
name = "latch-agent"
version = "0.2.1"
description = "Universal gating and audit layer for AI agents — policy-based tool gating with WebAuthn approval flows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Latch Contributors" }]
keywords = ["ai", "agent", "security", "mcp", "tool-gating", "audit", "webauthn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
    "fastmcp>=3.0",
    "aiohttp>=3.9",
    "webauthn>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/dipakkrishnan/latch"
Repository = "https://github.com/dipakkrishnan/latch"
Issues = "https://github.com/dipakkrishnan/latch/issues"

[project.scripts]
latch = "latch.cli:main"
latch-hook = "latch.hook:main"
latch-serve = "latch.serve:main"
latch-dashboard = "latch.dashboard:main"
latch-enroll = "latch.enroll:main"
